--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ TODOs
 
 Include compression in FLOPART_data.
 
+2022.2.15
+
+FLOPART_data error if missing counts.
+
 2022.1.27
 
 FLOPART now works if annotation column of label data table is a factor
