--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in version 2024.6.19
+
+- fix ubsan issue by checking if at least 1 label before getting pointer.
+
 Changes in version 2023.8.31
 
 - reformat NEWS.
